--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@emotion/core": "10.1.1",
     "@emotion/styled": "10.0.27",
     "common-experience-client": "1.20.0",
-    "common-experience-library": "file:../common-experience-library/common-experience-library-0.35.0-SNAPSHOT.tgz",
+    "common-experience-library": "0.35.0",
     "date-fns": "2.16.0",
     "downshift": "5.4.7",
     "framer-motion": "4.1.17",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-magma-dom": "2.5.8",
+    "react-magma-dom": "2.5.10",
     "react-magma-icons": "2.3.3",
+    "swr": "1.3.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
